--- a/README
+++ b/README
@@ -14,11 +14,11 @@ Para Ejecutar use:
 make exe
 
 Linea de ejecucion:
-./OPHS ruta_instancia/nombre_instancia archivo_resultados operador_seleccion tasa_cruzamiento tasa_mutacion tamano_poblacion maximo_evaluaciones semilla tamano_torneo
+./OPHS ruta_instancia/nombre_instancia archivo_resultados operador_seleccion elitismo_opcional tasa_cruzamiento tasa_mutacion tamano_poblacion maximo_evaluaciones semilla tamano_torneo
 
 operador_seleccion:
 1: ROULETTE, 2: TOURNAMENT
 
 
 Ejemplo:
-./OPHS Instancias/100-240-15-10.ophs results.txt 2 0.3 0.1 50 1e+4 2 5
+./OPHS Instancias/100-240-15-10.ophs results.txt 2 1 0.3 0.1 50 1e+4 2 5
